[gd_scene load_steps=8 format=2]

[ext_resource path="res://Backgrounds/crash2.png" type="Texture" id=1]
[ext_resource path="res://DriverSideScene.gd" type="Script" id=2]
[ext_resource path="res://Fonts/PokemonGb-RAeo.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=4]
resource_name = "FadeIn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Dash:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.207843 ), Color( 1, 1, 1, 0.466667 ), Color( 1, 1, 1, 0.741176 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "TextPop2"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("TextEdit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextEdit:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "G", "Go", "Got", "Got K", "Got Ke", "Got Key", "Got Keys", "Got Keys." ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadeOut"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("TextEdit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.768627 ), Color( 1, 1, 1, 0.564706 ), Color( 1, 1, 1, 0.231373 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[node name="CarDriverSide" type="Node2D"]
script = ExtResource( 2 )

[node name="Dash" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 383.452, 382.957 )
scale = Vector2( 4.80685, 5.34783 )
texture = ExtResource( 1 )

[node name="Fade2" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 4 )

[node name="TextPop2" type="AnimationPlayer" parent="."]
anims/TextPop2 = SubResource( 6 )
anims/fadeOut = SubResource( 3 )

[node name="TextEdit" type="TextEdit" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 72.0
margin_top = 504.0
margin_right = 695.0
margin_bottom = 704.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="TextPop2" to="." method="_on_TextPop2_animation_finished"]
